# ZombieClickLess

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
assets/: LIC.txt  ReadMe.txt
cmake/: ClangPresets.json  CommonPresets.json  CreateModuleLib.cmake  DebugPresets.json  GccPresets.json  ReleasePresets.json  WindowsPresets.json
src/: CMakeLists.txt  main.cpp
src/Button/: Button.cxx  CMakeLists.txt
src/Counter/: CMakeLists.txt  Counter.cxx
src/Game/: CMakeLists.txt  Game.cxx
src/Helpers/: CMakeLists.txt  Helpers.cxx  Logger.cxx  Timer.cxx
src/Input/: CMakeLists.txt  Input.cxx
src/Math/: Box.cxx  CMakeLists.txt  Math.cxx  Vector2D.cxx
src/Renderer/: CMakeLists.txt  Renderer.cxx
src/ZombieMgr/: CMakeLists.txt  Zombie.cxx  ZombieMgr.cxx
